--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cédric Lang-Roth | Web developer</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/1454393722.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
@@ -32,6 +36,18 @@
           id="btn-cta"
           >Visit my website</a
         >
+      </div>
+      <div class="card">
+        <h2 class="text-center">My tech stack</h2>
+        <ul class="list-inline text-center">
+          <li><i class="fa-brands fa-html5 fa-2xl"></i></li>
+          <li><i class="fa-brands fa-css3-alt fa-2xl"></i></li>
+          <li><i class="fa-brands fa-js fa-2xl"></i></li>
+          <li><i class="fa-brands fa-react fa-2xl"></i></li>
+          <li><i class="fa-brands fa-vuejs fa-2xl"></i></li>
+          <li><i class="fa-brands fa-php fa-2xl"></i></li>
+          <li><i class="fa-brands fa-symfony fa-2xl"></i></li>
+        </ul>
       </div>
       <div class="card">
         <h2 class="text-center">Follow me!</h2>
